<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    tools:context=".ui.authentication.sign_out.SignOutFragment">

    <TextView
        android:id="@+id/text_sign_out"
        style="@style/text_presentation"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_first_name"
        style="@style/baseEditText"
        android:layout_marginTop="68dp"
        android:hint="@string/enter_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_out" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_last_name"
        style="@style/baseEditText"
        android:layout_marginTop="28dp"
        android:hint="@string/enter_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_login"
        style="@style/baseEditText"
        android:layout_marginTop="28dp"
        android:hint="@string/enter_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_last_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_password"
        style="@style/baseEditText"
        android:layout_marginTop="28dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/base_button"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back"
        style="@style/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>