<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    tools:context=".ui.authentication.sign_in.SignInFragment">

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_sign_in"
        style="@style/text_presentation"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_login"
        style="@style/baseEditText"
        android:layout_marginTop="68dp"
        android:hint="@string/enter_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_in" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_enter_password"
        style="@style/baseEditText"
        android:layout_marginTop="36dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/base_button"
        android:layout_marginTop="48dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_and_right_big_margin"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="@dimen/left_and_right_big_margin"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>