<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background"
    tools:context=".ui.base.base_basket.view_product.ViewProductFragment">

    <ImageView
        android:id="@+id/btn_back"
        style="@style/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <LinearLayout
            android:id="@+id/base_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/base_background"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@drawable/camera" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_product_edit_text"
                style="@style/itemText"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/title_product"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_product_edit_text"
                style="@style/itemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:hint="@string/description_product"
                android:minHeight="144dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:gravity="start"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:gravity="start"
                    android:text="@string/count"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="monospace"
                    android:gravity="start"
                    android:paddingEnd="8dp"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="fghjjhjhgghgfdfgh"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>